--- a/02/global.css
+++ b/02/global.css
@@ -1,1 +1,38 @@
 /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+h1 {
+    background: #0076FF;
+    color: white;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    width: 350px;
+    text-align: center;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: medium;
+    font-weight: 500;
+    margin-top: 20px;
+    margin-left: 20px;
+    width: 390px;
+    text-transform: uppercase;
+    font-weight: 600;
+
+}
+
+
+p {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: medium;
+    font-weight: 300;
+    background-color: #FFFFFF;
+    color: #444343;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 350px;
+    text-align: center;
+    margin-left: 20px;
+    width: 380px;
+    font-weight: 400;
+    border-color: #0075FF;
+    border-style: solid;
+    border-width: thick;
+}
