--- a/03/global.css
+++ b/03/global.css
@@ -1,1 +1,32 @@
 /*font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;*/
+
+h1 {
+    background: #0076FF;
+    color: white;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    width: 430px;
+    text-align: center;
+    font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
+    font-weight: 500;
+    font-weight: 600;
+    font-size: 40px;
+    text-decoration: underline;
+
+}
+
+
+p {
+    font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
+    font-size: medium;
+    background-color: #00489C;
+    color: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 430px;
+    text-align: center;
+    font-weight: 400;
+    border-top-color: #CCCCCC;
+    border-top-style: solid;
+    border-top-width: thin;
+}
